@@ -171,6 +171,11 @@ macAppBundle {
     javaProperties.put("apple.laf.useScreenMenuBar", "true")
 
 }
+
+if (JavaVersion.current() > 8) {
+    org.gradle.jvmargs=--add-opens=java.base/java.util=ALL-UNNAMED
+}
+
 /*
  * Allows you to run the UI tests in headless mode by calling gradle with the -Pheadless=true argument
  */
